# tree-sitter-ita

./: CLAUDE.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json
bindings/c/: tree-sitter-glu.h  tree-sitter-glu.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_glu/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
